--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png"> 
   <title>Frontend Mentor | QR code component</title> 
   <link rel="stylesheet" href="styles.css"> 
+  <link rel="stylesheet" href="author.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="wrapper center-div">
     <img src="assets/image-qr-code.png" alt="QR Code" width="288" height="288" class="img-qrcode">
     <h1 class="txt-title">Improve your front-end skills by building projects</h1>
     <p class="txt-sub">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
+  <a href="https://github.com/MlcodeDev" id="author">Made by @MlcodeDev 👻</a>
 </body>
 </html>
