--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 
 <body>
-  <div class="wrapper center-div">
-    <img src="assets/image-qr-code.png" alt="QR Code" width="288" height="288" class="img-qrcode">
-    <h1 class="txt-title">Improve your front-end skills by building projects</h1>
-    <p class="txt-sub">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  <a href="https://github.com/MlcodeDev" id="author">Made by @MlcodeDev 👻</a>
+  <main>
+    <div class="wrapper center-div">
+      <img src="assets/image-qr-code.png" alt="QR Code" width="288" height="288" class="img-qrcode">
+      <h1 class="txt-title">Improve your front-end skills by building projects</h1>
+      <p class="txt-sub">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+    <a href="https://github.com/MlcodeDev" role="link" id="author">Made by @MlcodeDev 👻</a>
+  </main>
 </body>
 </html>
